kubernetes/apps/default/hajimari/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hajimari
  namespace: default
  annotations:
    hajimari.io/enable: "false"
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "hajimari.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: hajimari
          port: 3000
